# optimizeGEMM

./: CMakeLists.txt  README.md
include/: convolution_3x3s1.h  convolution_3x3s1_winograd.h  convolution_sgemm.h
src/: matrixMul.c  test  test.c  test_conv.cpp  test_winograd.cpp
tvm/: matmul.json  tensorize.py  tune_matmul_x86.py  use_external_lib.py
tvm/conv_cuda/: opt_conv_cuda.py
tvm/optimizeGEMM/: autotvm.py  base.py  blocking.py  loop_permute.py  matmul.log.tmp  packing.py  parallel.py  vectorize.py  write_cache.py
tvm/relay/: simple_conv2d_relay.py  simple_relay.py
tvm/schedule/: bind.py  cache_read.py  compute_at.py  compute_inline.py  compute_root.py  fuse.py  parallel.py  reorder.py  split.py  storage_align.py  tile.py  unroll.py  vectorize.py
